<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/enter_tip"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/textinputborder"
            android:inputType="text"
            android:singleLine="true"
            android:text="@string/enter_tip"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:visibility="visible"
            tools:visibility="visible" />
        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/total"></TextView>
        <EditText
            android:id="@+id/enter_total"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:singleLine="true"
            android:background="@drawable/textinputborder"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:visibility="visible"
            tools:visibility="visible"
            android:layout_margin="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="237dp"
        android:layout_height="125dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/submit_tip" />


        <Button
            android:id="@+id/total_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="12dp"
            android:text="@string/total_button" />


    </LinearLayout>

    <EditText
        android:id="@+id/display_total"
        android:layout_width="367dp"
        android:layout_height="385dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="number"
        android:text="You owe" />

</LinearLayout>


